# nn_from_scratch

./: .gitignore  README.md  pyproject.toml
examples/: fmnist.ipynb  mnist.ju.py
src/nn_from_scratch/: __init__.py  __main__.py  activation.py  cli.py  dataloader.py  datasets.py  inference.py  initialization.py  layer.py  loss.py  mnist.py  model.py  nn_from_np.py  optim.py  torch_cnn.py  train.py  xor.py
