[project]
name = "nn-from-scratch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "simo", email = "svm.zhang@gmail.com" }
]
dependencies = [
    "numpy>=2.1.3",
    "torch>=2.5.1",
    "scipy>=1.14.1",
    "torchvision>=0.20.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nn_from_scratch"]


[project.scripts]
nnnp = "nn_from_scratch:run"
