[project]
name = "nn-from-scratch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "simo", email = "svm.zhang@gmail.com" }
]
dependencies = [
    "numpy>=2.1.3",
    "torch>=2.5.1",
    "scipy>=1.14.1",
    "torchvision>=0.20.1",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.3",
    "numpy-typing>=1.1.1",
    "tqdm>=4.67.1",
    "notebook>=7.3.2",
    "nbclassic>=1.2.0",
    "jupynium>=0.2.5",
    "ipywidgets>=8.1.5",
    "bokeh>=3.6.2",
    "altair>=5.5.0",
    "polars>=1.21.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nn_from_scratch"]


[project.scripts]
nnnp = "nn_from_scratch:run"
